atulizacao Titulo da pagina contador

--- a/PwaAula1/Pages/Counter.razor
+++ b/PwaAula1/Pages/Counter.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Contador</h1>
+<h1>Contador UNISO AULA 1</h1>
 
 <p role="status"> Valor atual do contador: @currentCount</p>
 
